c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_types/extra_credit/incomplete_unions/define_incomplete_union.c
union u; // declare incomplete union type

union u my_union; // INVALID: defining variable with incomplete union type